<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>awsim_pointcloud_builder</name>
  <version>1.0.0</version>
  <description>Pointcloud-Map-Builder for AWSIM </description>
  <maintainer email="tengbenh64@gmail.com">Kazushi Fujimoto</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>